--- a/app/src/main/res/layout/fragment_intro.xml
+++ b/app/src/main/res/layout/fragment_intro.xml
@@ -65,23 +65,6 @@
             app:layout_constraintTop_toBottomOf="@+id/kassa_title" />
 
         <Button
-            android:id="@+id/signup_button"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginStart="@dimen/margin_24dp"
-            android:layout_marginEnd="@dimen/margin_24dp"
-            android:layout_marginBottom="18dp"
-            android:background="@drawable/bg_intro_btn"
-            android:fontFamily="sans-serif-medium"
-            android:text="@string/registration"
-            android:textAllCaps="false"
-            android:textColor="@color/colorPrimary"
-            android:textSize="@dimen/text_20sp"
-            app:layout_constraintBottom_toTopOf="@+id/login_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <Button
             android:id="@+id/login_button"
             android:layout_width="match_parent"
             android:layout_height="60dp"
@@ -93,6 +76,23 @@
             android:text="@string/login_btn"
             android:textAllCaps="false"
             android:textColor="@color/registration_white_color"
+            android:textSize="@dimen/text_20sp"
+            app:layout_constraintBottom_toTopOf="@+id/signup_button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/signup_button"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginStart="@dimen/margin_24dp"
+            android:layout_marginEnd="@dimen/margin_24dp"
+            android:layout_marginBottom="18dp"
+            android:background="@drawable/bg_intro_btn"
+            android:fontFamily="sans-serif-medium"
+            android:text="@string/registration"
+            android:textAllCaps="false"
+            android:textColor="@color/colorPrimary"
             android:textSize="@dimen/text_20sp"
             app:layout_constraintBottom_toTopOf="@+id/intro_registration_message"
             app:layout_constraintEnd_toEndOf="parent"
