--- a/app/src/main/res/layout/fragment_auth_sign_up.xml
+++ b/app/src/main/res/layout/fragment_auth_sign_up.xml
@@ -26,41 +26,41 @@
         android:text="@string/register_application"
         android:textColor="@color/gray_intro_text"
         android:textSize="@dimen/text_20sp"
-        app:layout_constraintBottom_toTopOf="@+id/phone_edit_text"
+        app:layout_constraintBottom_toTopOf="@+id/phone_input_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/phone_edit_text"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/phone_input_view"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:inputType="phone"
-        android:maxLength="18"
-        android:maxLines="1"
-        android:paddingBottom="@dimen/margin_16dp"
-        android:text="@string/phone_start_symbols"
-        android:textColor="@color/gray_intro_text"
-        android:textColorHint="@color/grayText"
-        android:textCursorDrawable="@drawable/color_cursor"
-        android:textSize="@dimen/text_30sp"
-        android:textStyle="bold"
-        app:backgroundTint="@color/grayText"
+        android:textSize="@dimen/text_13sp"
+        app:errorTextAppearance="@style/ErrorAppearance"
         app:layout_constraintBottom_toTopOf="@+id/signup_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/input_title" />
+        app:layout_constraintTop_toBottomOf="@+id/input_title">
 
-    <TextView
-        android:id="@+id/error_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/error_red_color"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phone_edit_text"
-        tools:text="@string/wrong_format_error" />
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/phone_edit_text"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@android:color/transparent"
+            android:inputType="phone"
+            android:maxLength="18"
+            android:maxLines="1"
+            android:paddingBottom="@dimen/margin_16dp"
+            android:text="@string/phone_start_symbols"
+            android:textColor="@color/gray_intro_text"
+            android:textColorHint="@color/grayText"
+            android:textCursorDrawable="@drawable/color_cursor"
+            android:textSize="@dimen/text_30sp"
+            android:textStyle="bold"
+            app:backgroundTint="@color/grayText" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/signup_button"
@@ -69,7 +69,6 @@
         android:layout_marginStart="@dimen/margin_24dp"
         android:layout_marginTop="@dimen/margin_32dp"
         android:layout_marginEnd="@dimen/margin_24dp"
-        android:layout_marginBottom="30dp"
         android:background="@drawable/bg_intro_btn"
         android:fontFamily="sans-serif-medium"
         android:radius="0dp"
@@ -80,7 +79,7 @@
         app:layout_constraintBottom_toTopOf="@+id/login_checkbox"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/error_tv" />
+        app:layout_constraintTop_toBottomOf="@+id/phone_input_view" />
 
     <CheckBox
         android:id="@+id/login_checkbox"
@@ -122,6 +121,6 @@
         app:layout_constraintBottom_toTopOf="@+id/signup_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phone_edit_text" />
+        app:layout_constraintTop_toBottomOf="@+id/phone_input_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
