added isEmpty ext function, update koin, fixed accounts margins

--- a/app/src/main/res/layout/fragment_accounts.xml
+++ b/app/src/main/res/layout/fragment_accounts.xml
@@ -105,9 +105,9 @@
                         android:id="@+id/account_background"
                         android:layout_width="match_parent"
                         android:layout_height="74dp"
-                        android:layout_marginStart="@dimen/margin_24dp"
+                        android:layout_marginStart="@dimen/margin_18dp"
                         android:layout_marginTop="@dimen/margin_24dp"
-                        android:layout_marginEnd="@dimen/margin_24dp"
+                        android:layout_marginEnd="@dimen/margin_18dp"
                         android:src="@drawable/bg_profile_gradient"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -152,9 +152,9 @@
                         android:id="@+id/new_account_background"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
-                        android:layout_marginStart="@dimen/margin_24dp"
+                        android:layout_marginStart="@dimen/margin_18dp"
                         android:layout_marginTop="@dimen/margin_24dp"
-                        android:layout_marginEnd="@dimen/margin_24dp"
+                        android:layout_marginEnd="@dimen/margin_18dp"
                         android:src="@drawable/bg_profile_gradient"
                         app:layout_constraintBottom_toBottomOf="@+id/bik_input_view"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -348,15 +348,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:visibility="invisible"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/daily_withdrawal_tv">
 
                     <ImageView
                         android:id="@+id/background"
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
-                        android:layout_marginStart="@dimen/margin_24dp"
+                        android:layout_marginStart="@dimen/margin_18dp"
                         android:layout_marginTop="@dimen/margin_24dp"
-                        android:layout_marginEnd="@dimen/margin_24dp"
+                        android:layout_marginEnd="@dimen/margin_18dp"
                         android:background="@drawable/bg_profile_gradient"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -455,9 +457,9 @@
                         android:id="@+id/card_background"
                         android:layout_width="match_parent"
                         android:layout_height="74dp"
-                        android:layout_marginStart="@dimen/margin_16dp"
+                        android:layout_marginStart="@dimen/margin_18dp"
                         android:layout_marginTop="@dimen/margin_8dp"
-                        android:layout_marginEnd="@dimen/margin_16dp"
+                        android:layout_marginEnd="@dimen/margin_18dp"
                         android:src="@drawable/bg_profile_gradient"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -502,9 +504,9 @@
                         android:id="@+id/new_card_background"
                         android:layout_width="match_parent"
                         android:layout_height="207dp"
-                        android:layout_marginStart="@dimen/margin_16dp"
+                        android:layout_marginStart="@dimen/margin_18dp"
                         android:layout_marginTop="@dimen/margin_8dp"
-                        android:layout_marginEnd="@dimen/margin_16dp"
+                        android:layout_marginEnd="@dimen/margin_18dp"
                         android:src="@drawable/bg_profile_gradient"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
