--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="margin_48dp">48dp</dimen>
     <dimen name="margin_32dp">32dp</dimen>
     <dimen name="margin_24dp">24dp</dimen>
+    <dimen name="margin_18dp">18dp</dimen>
     <dimen name="margin_16dp">16dp</dimen>
     <dimen name="margin_8dp">8dp</dimen>
     <dimen name="margin_4dp">4dp</dimen>
