--- a/app/src/main/res/layout/fragment_accounts.xml
+++ b/app/src/main/res/layout/fragment_accounts.xml
@@ -93,13 +93,29 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/accounts_title" />
 
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/cards_daily_recycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/margin_8dp"
+                    android:layout_marginTop="18dp"
+                    android:layout_marginEnd="@dimen/margin_8dp"
+                    android:nestedScrollingEnabled="false"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/daily_withdrawal_tv"
+                    tools:itemCount="2"
+                    tools:listitem="@layout/item_accounts_card"
+                    tools:visibility="invisible" />
+
                 <!--  =========  -->
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/no_account_block"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    app:layout_constraintTop_toBottomOf="@+id/daily_withdrawal_tv">
+                    app:layout_constraintTop_toBottomOf="@+id/cards_daily_recycler">
 
                     <ImageView
                         android:id="@+id/account_background"
@@ -145,8 +161,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:visibility="invisible"
-                    app:layout_constraintTop_toBottomOf="@+id/daily_withdrawal_tv"
-                    tools:visibility="visible">
+                    app:layout_constraintTop_toBottomOf="@+id/cards_daily_recycler">
 
                     <ImageView
                         android:id="@+id/new_account_background"
@@ -350,7 +365,7 @@
                     android:visibility="invisible"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/daily_withdrawal_tv">
+                    app:layout_constraintTop_toBottomOf="@+id/cards_daily_recycler">
 
                     <ImageView
                         android:id="@+id/background"
@@ -465,8 +480,7 @@
                     android:layout_height="0dp"
                     android:layout_marginTop="@dimen/margin_8dp"
                     android:visibility="invisible"
-                    app:layout_constraintTop_toBottomOf="@+id/account_block"
-                    tools:visibility="visible">
+                    app:layout_constraintTop_toBottomOf="@+id/account_block">
 
                     <ImageView
                         android:id="@+id/new_card_daily_background"
@@ -592,152 +606,6 @@
                     tools:itemCount="2"
                     tools:listitem="@layout/item_accounts_card"
                     tools:visibility="invisible" />
-
-                <!--  =========  -->
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/no_card_block"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    app:layout_constraintTop_toBottomOf="@+id/cards_recycler">
-
-                    <ImageView
-                        android:id="@+id/card_background"
-                        android:layout_width="match_parent"
-                        android:layout_height="74dp"
-                        android:layout_marginStart="@dimen/margin_18dp"
-                        android:layout_marginTop="@dimen/margin_8dp"
-                        android:layout_marginEnd="@dimen/margin_18dp"
-                        android:src="@drawable/bg_profile_gradient"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:id="@+id/add_card_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/margin_24dp"
-                        android:fontFamily="sans-serif"
-                        android:text="@string/add_card"
-                        android:textColor="@color/withdraws_yellow"
-                        android:textSize="@dimen/text_20sp"
-                        app:layout_constraintBottom_toBottomOf="@+id/card_background"
-                        app:layout_constraintStart_toStartOf="@id/card_background"
-                        app:layout_constraintTop_toTopOf="@+id/card_background" />
-
-                    <ImageView
-                        android:id="@+id/add_card_image"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="24dp"
-                        app:layout_constraintBottom_toBottomOf="@id/card_background"
-                        app:layout_constraintEnd_toEndOf="@+id/card_background"
-                        app:layout_constraintTop_toTopOf="@id/card_background"
-                        app:srcCompat="@drawable/ic_plus" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <!--  =========  -->
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/new_card_block"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:visibility="invisible"
-                    app:layout_constraintTop_toBottomOf="@+id/cards_recycler">
-
-                    <ImageView
-                        android:id="@+id/new_card_background"
-                        android:layout_width="match_parent"
-                        android:layout_height="207dp"
-                        android:layout_marginStart="@dimen/margin_18dp"
-                        android:layout_marginTop="@dimen/margin_8dp"
-                        android:layout_marginEnd="@dimen/margin_18dp"
-                        android:src="@drawable/bg_profile_gradient"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:id="@+id/new_add_card_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/margin_24dp"
-                        android:layout_marginTop="22dp"
-                        android:fontFamily="sans-serif"
-                        android:text="@string/add_card"
-                        android:textColor="@color/withdraws_yellow"
-                        android:textSize="@dimen/text_20sp"
-                        app:layout_constraintStart_toStartOf="@id/new_card_background"
-                        app:layout_constraintTop_toTopOf="@+id/new_card_background" />
-
-                    <ImageView
-                        android:id="@+id/card_close_image"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="22dp"
-                        app:layout_constraintBottom_toBottomOf="@+id/new_add_card_tv"
-                        app:layout_constraintEnd_toEndOf="@+id/new_card_background"
-                        app:layout_constraintTop_toTopOf="@id/new_add_card_tv"
-                        app:srcCompat="@drawable/ic_close" />
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/card_input_view"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/margin_24dp"
-                        android:hint="@string/enter_card_number"
-                        android:textColorHint="@color/gray_profile"
-                        android:textSize="@dimen/text_13sp"
-                        app:errorTextAppearance="@style/ErrorAppearance"
-                        app:layout_constraintEnd_toEndOf="@+id/new_card_background"
-                        app:layout_constraintStart_toStartOf="@+id/new_card_background"
-                        app:layout_constraintTop_toBottomOf="@+id/new_add_card_tv">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/card_edit_text"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:backgroundTint="@color/gray_profile"
-                            android:imeOptions="actionDone"
-                            android:inputType="phone"
-                            android:maxLength="19"
-                            android:maxLines="1"
-                            android:textColor="@color/agreement_text_color"
-                            android:textColorHint="@color/gray_profile"
-                            android:textSize="@dimen/text_18sp" />
-
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <TextView
-                        android:layout_width="300dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/margin_4dp"
-                        android:fontFamily="sans-serif-medium"
-                        android:text="@string/new_card_message"
-                        android:textColor="@color/gray_profile"
-                        android:textSize="@dimen/text_13sp"
-                        app:layout_constraintBottom_toBottomOf="@+id/new_card_background"
-                        app:layout_constraintStart_toStartOf="@+id/card_input_view"
-                        app:layout_constraintTop_toBottomOf="@+id/card_input_view" />
-
-                    <Button
-                        android:id="@+id/add_card_button"
-                        android:layout_width="0dp"
-                        android:layout_height="56dp"
-                        android:layout_margin="@dimen/margin_24dp"
-                        android:background="@drawable/bg_intro_btn"
-                        android:fontFamily="sans-serif-medium"
-                        android:text="@string/add_button_text"
-                        android:textAllCaps="false"
-                        android:textColor="@color/continue_color"
-                        android:textSize="@dimen/text_20sp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/new_card_background" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <ProgressBar
                     android:id="@+id/progress_bar"
