--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -320,7 +320,20 @@
         android:id="@+id/dailyWithdrawFragment"
         android:name="taxi.kassa.view.withdraws.withdraw_create.daily.DailyWithdrawFragment"
         android:label="DailyWithdrawFragment"
-        tools:layout="@layout/fragment_daily_withdraw" />
+        tools:layout="@layout/fragment_daily_withdraw">
+        <action
+            android:id="@+id/action_dailyWithdrawFragment_to_accountsFragment"
+            app:destination="@id/accountsFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+        <action
+            android:id="@+id/action_dailyWithdrawFragment_to_notificationsFragment"
+            app:destination="@id/notificationsFragment"
+            app:popEnterAnim="@anim/slide_in_top"
+            app:popExitAnim="@anim/slide_out_top" />
+    </fragment>
 
     <fragment
         android:id="@+id/ordersFragment"
