--- a/app/src/main/res/layout/fragment_withdraw_create.xml
+++ b/app/src/main/res/layout/fragment_withdraw_create.xml
@@ -78,7 +78,8 @@
         android:id="@+id/daily_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_32dp"
+        android:layout_marginStart="@dimen/margin_24dp"
+        android:layout_marginTop="@dimen/margin_32dp"
         android:text="@string/daily_withdrawal"
         android:textColor="@color/gray_intro_text"
         android:textSize="@dimen/text_24sp"
@@ -100,7 +101,7 @@
         android:id="@+id/daily_message"
         android:layout_width="296dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_32dp"
+        android:layout_marginStart="@dimen/margin_24dp"
         android:layout_marginTop="12dp"
         android:text="@string/daily_withdrawal_message"
         android:textColor="@color/accounts_dialog_gray"
@@ -112,7 +113,7 @@
         android:id="@+id/daily_detailed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_32dp"
+        android:layout_marginStart="@dimen/margin_24dp"
         android:layout_marginTop="12dp"
         android:text="@string/detailed"
         android:textColor="@color/blue_color"
@@ -138,7 +139,8 @@
         android:id="@+id/instant_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_32dp"
+        android:layout_marginStart="@dimen/margin_24dp"
+        android:layout_marginTop="@dimen/margin_32dp"
         android:text="@string/instant_withdrawal"
         android:textColor="@color/gray_intro_text"
         android:textSize="@dimen/text_24sp"
@@ -160,7 +162,7 @@
         android:id="@+id/instant_message"
         android:layout_width="296dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_32dp"
+        android:layout_marginStart="@dimen/margin_24dp"
         android:layout_marginTop="12dp"
         android:text="@string/instant_withdrawal_message"
         android:textColor="@color/accounts_dialog_gray"
@@ -172,7 +174,7 @@
         android:id="@+id/instant_detailed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_32dp"
+        android:layout_marginStart="@dimen/margin_24dp"
         android:layout_marginTop="12dp"
         android:text="@string/detailed"
         android:textColor="@color/blue_color"
