added custom keyboard

--- a/app/src/main/res/layout/fragment_daily_withdraw.xml
+++ b/app/src/main/res/layout/fragment_daily_withdraw.xml
@@ -126,8 +126,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="76dp"
-        android:visibility="gone"
-        tools:visibility="visible">
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/select_account_title"
@@ -183,7 +182,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="76dp"
-        android:visibility="gone">
+        android:visibility="gone"
+        tools:visibility="visible">
 
         <ImageView
             android:id="@+id/withdraw_background"
@@ -307,6 +307,14 @@
             android:textAllCaps="false"
             android:textColor="@color/continue_color"
             android:textSize="@dimen/text_20sp"
+            app:layout_constraintBottom_toTopOf="@+id/keyboard"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <include
+            android:id="@+id/keyboard"
+            layout="@layout/keyboard"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
