--- a/app/src/main/res/drawable/bg_withdraw_gradient_4dp.xml
+++ b/app/src/main/res/drawable/bg_withdraw_gradient_4dp.xml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
-    <item>
-        <ripple android:color="@color/blackText" tools:targetApi="lollipop">
-            <item>
-                <shape android:shape="rectangle">
-                    <corners android:radius="4dp" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <corners android:radius="4dp" />
 
-                    <gradient
-                        android:angle="270"
-                        android:endColor="@color/withdraws_gradient_dark"
-                        android:startColor="@color/withdraws_gradient"
-                        android:type="linear" />
-                </shape>
-            </item>
-        </ripple>
-    </item>
-</selector>
+    <gradient
+        android:angle="270"
+        android:endColor="@color/withdraws_gradient_dark"
+        android:startColor="@color/withdraws_gradient"
+        android:type="linear" />
+</shape>
