added InstantWithdrawFragment, InstantWithdrawViewModel, CardsAdapter

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -314,6 +314,13 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
+        <action
+            android:id="@+id/action_withdrawCreateFragment_to_instantWithdrawFragment"
+            app:destination="@id/instantWithdrawFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
 
     <fragment
@@ -330,6 +337,18 @@
             app:popExitAnim="@anim/slide_out_right" />
         <action
             android:id="@+id/action_dailyWithdrawFragment_to_notificationsFragment"
+            app:destination="@id/notificationsFragment"
+            app:popEnterAnim="@anim/slide_in_top"
+            app:popExitAnim="@anim/slide_out_top" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/instantWithdrawFragment"
+        android:name="taxi.kassa.view.withdraws.withdraw_create.instant.InstantWithdrawFragment"
+        android:label="InstantWithdrawFragment"
+        tools:layout="@layout/fragment_daily_withdraw">
+        <action
+            android:id="@+id/action_instantWithdrawFragment_to_notificationsFragment"
             app:destination="@id/notificationsFragment"
             app:popEnterAnim="@anim/slide_in_top"
             app:popExitAnim="@anim/slide_out_top" />
