--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -43,6 +43,7 @@
     <color name="withdraws_yellow">#D3A956</color>
     <color name="withdraws_gradient">#1B1B24</color>
     <color name="withdraws_gradient_dark">#191920</color>
+    <color name="withdraws_white_text">#F2F2F2</color>
 
     <color name="accounts_dialog_background">#4D000000</color>
     <color name="accounts_dialog_gray">#B2FFFFFF</color>
